temp: add prerendering
I'm thinking on moving away from having different paths for each language
as this can be daunting, push away possible contributors and it's becoming
even on this early stage, a pain to mantain.

--- a/src/pages/en/contact.mdx
+++ b/src/pages/en/contact.mdx
@@ -4,6 +4,7 @@ description: You can reach out to me, no strings attached. I'm always happy to h
 lang: 'en'
 layout: '@/layouts/pages/Contact.astro'
 ---
+export const prerender = true;
 
 If you have any questions, feedback, or just want to say hi, I'm more than happy to hear from you.
 
