--- a/src/pages/es/contacto.mdx
+++ b/src/pages/es/contacto.mdx
@@ -4,6 +4,7 @@ description: Puedes contactarme sin compromiso. Siempre estoy dispuesto a ayudar
 lang: 'es'
 layout: '@/layouts/pages/Contact.astro'
 ---
+export const prerender = true;
 
 Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de saber de ti.
 
