--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -5,6 +5,7 @@ lang: "es"
 cvLink: "t.com"
 layout: "@/layouts/pages/About.astro"
 ---
+export const prerender = true;
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
