--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -5,6 +5,7 @@ lang: "en"
 cvLink: "t.com"
 layout: "@/layouts/pages/About.astro"
 ---
+export const prerender = true;
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
