Move home to their lang folder (using astro not md)
I find this solution easier to manage, even if in the future
I have to create folders for each language, it's easier to have this
dynamic content like that instead of a limiting styles with markdown
or fully hardcoded layouts.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -32,7 +32,8 @@
     "original_version": "Original Version",
     "more_about_me": "Know me more",
     "download_here": "Download here",
-    "download": "Download"
+    "download": "Download",
+    "view_all_posts": "View all posts"
   },
   "messages": {
     "page_not_found": "Page not found",
