--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -32,7 +32,8 @@
     "original_version": "Versión Original",
     "more_about_me": "Más sobre mí",
     "download": "Descargar",
-    "download_here": "Descarga aquí"
+    "download_here": "Descarga aquí",
+    "view_all_posts": "Ver todos los artículos"
   },
   "messages": {
     "page_not_found": "Página no encontrada",
