improve content configuration with authors, collaborators and testimonials

--- a/src/content/blog/es/10-consejos-que-yo-deberia-seguir.mdx
+++ b/src/content/blog/es/10-consejos-que-yo-deberia-seguir.mdx
@@ -2,7 +2,7 @@
 title: 10 consejos que yo debería seguir
 date: '2020-07-12'
 description: Son 10 consejos que yo he aprendido a lo largo de mi corta vida pero que me falta ponerlas en práctica y que creo que podrían beneficiarte también y así me sirven a mi también de recordatorio.
-author: Misael Taveras
+author: misael-taveras
 tags: ['Personal', 'Consejo']
 banner: ../../../assets/posts/banner-10-consejos-que-yo-deberia-seguir.jpg
 ---
