--- a/src/content/blog/es/aprendiendo-a-aprender.mdx
+++ b/src/content/blog/es/aprendiendo-a-aprender.mdx
@@ -2,7 +2,7 @@
 title: Aprendiendo a aprender
 date: '2019-09-08'
 description: Como aprender mejor siguiendo algunas técnicas y recomendaciones que me han servido para aprender independiente.
-author: Misael Taveras
+author: misael-taveras
 tags: ['Consejo', 'Soft Skills']
 banner: ../../../assets/posts/banner-aprendiendo-a-aprender.jpg
 ---
