--- a/src/content/blog/es/caso-de-uso-nuevo-landing.mdx
+++ b/src/content/blog/es/caso-de-uso-nuevo-landing.mdx
@@ -2,7 +2,7 @@
 title: "[Caso de uso]: Un nuevo landing"
 date: "2020-02-15"
 description: Con la llegada del nuevo año se me ocurrió rediseñar mi página de inicio (otra vez) pero ahora con un enfoque diferente. En este breve post, explico mi proceso creativo y como ha ido evolucionando la página de inicio.
-author: Misael Taveras
+author: misael-taveras
 tags: ["Noticia", "Caso de uso"]
 banner: ../../../assets/posts/baner-caso-de-uso-nuevo-landing.jpg
 ---
