--- a/src/content/blog/es/introduccion-a-la-programacion-funcional.mdx
+++ b/src/content/blog/es/introduccion-a-la-programacion-funcional.mdx
@@ -2,7 +2,7 @@
 title: Introducción a la programación funcional
 date: "2020-07-26"
 description: 3 Conceptos claves para iniciar en el mundo de la programación funcional. En este primer apartado vamos a estar tratando los tres pilares escenciales de la programación funcional.
-author: Misael Taveras
+author: misael-taveras
 tags: ["JavaScript", "FP"]
 banner: ../../../assets/posts/banner-introduccion-a-la-programacion-funcional.jpg
 ---
