--- a/src/content/blog/es/la-historia-detras-del-blog.mdx
+++ b/src/content/blog/es/la-historia-detras-del-blog.mdx
@@ -2,7 +2,7 @@
 title: 'La historia detrás del blog'
 date: '2019-09-15'
 description: Parte del proceso que ha llevado este blog de un concepto a una realidad. Detalles de cómo funciona el blog.
-author: Misael Taveras
+author: misael-taveras
 tags: ['Noticia', 'Personal']
 banner: ../../../assets/posts/la-historia-detras-del-blog-banner.jpg
 ---
