--- a/src/content/blog/es/lo-que-trae-es2020.mdx
+++ b/src/content/blog/es/lo-que-trae-es2020.mdx
@@ -2,7 +2,7 @@
 title: Lo nuevo que trae ES2020
 date: '2020-08-10'
 description: Son 10 consejos que yo he aprendido a lo largo de mi corta vida pero que me falta ponerlas en práctica y que creo que podrían beneficiarte también y así me sirven a mi también de recordatorio.
-author: Misael Taveras
+author: misael-taveras
 tags: ['JavaScript', 'ES6']
 banner: ../../../assets/posts/banner-lo-que-trae-es2020.jpg
 ---
