--- a/src/content/blog/es/usar-map-filter-y-reduce-para-olvidarnos-de-los-bucles-for.mdx
+++ b/src/content/blog/es/usar-map-filter-y-reduce-para-olvidarnos-de-los-bucles-for.mdx
@@ -2,7 +2,7 @@
 title: Usar map, filter y reduce para olvidarnos de los bucles for
 date: "2019-08-18"
 description: Aprendiendo a usar las funciones map, filte y reduce para mejorar nuestras habilidades como desarrollador.
-author: Misael Taveras
+author: misael-taveras
 tags: ["JavaScript", "Programación Funcional"]
 banner: ../../../assets/posts/banner-usar-map-filter-y-reduce-para-olvidarnos-de-los-bucles-for.jpg
 ---
