--- a/src/content/blog/es/entendiendo-los-snapshots-de-jest.mdx
+++ b/src/content/blog/es/entendiendo-los-snapshots-de-jest.mdx
@@ -2,7 +2,7 @@
 title: Entendiendo los snapshots de Jest
 date: '2019-12-01'
 description: Escribes tests que te den confianza en tu código antes de lanzarlo a producción aprovechando al máximo los snapshots de Jest. Aprende a usarlos de la forma correcta.
-author: Misael Taveras
+author: misael-taveras
 tags: ['Test', 'Tutorial']
 banner: ../../../assets/posts/baner-entendiendo-los-snapshots-de-jest.jpg
 ---
