--- a/src/content/blog/es/porque-utilizo-brave-como-mi-navegador.mdx
+++ b/src/content/blog/es/porque-utilizo-brave-como-mi-navegador.mdx
@@ -2,7 +2,7 @@
 title: Porqué utilizo Brave como mi navegador principal
 date: '2019-08-28'
 description: Hace más de medio año que tomé la decisión de experimentar con Brave y desde entonces no he vuelto a usar google Chrome
-author: Misael Taveras
+author: misael-taveras
 tags: ['Herramientas', 'Opinión']
 banner: ../../../assets/posts/banner-porque-utilizo-brave-como-mi-navegador.jpg
 ---
