--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -66,7 +66,9 @@
   },
   "collections": {
     "all": "All",
-    "blog": "Blog"
+    "blog": "Blog",
+    "author": "Author",
+    "testimonial": "Testimonial"
   },
   "forms": {
     "name": "Name",
