--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -66,7 +66,9 @@
   },
   "collections": {
     "all": "Todo",
-    "blog": "Blog"
+    "blog": "Blog",
+    "author": "Autor",
+    "testimonial": "Testimonio"
   },
   "forms": {
     "name": "Nombre",
