--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -51,7 +51,8 @@
     "contact_thanks_description": "Me pondré en contacto contigo lo antes posible.",
     "reading_translation_archive": "[NOTE]: esta KEY no se usa en español, porque es el lenguaje original",
     "incomplete_translation_disclaimer": "[NOTE]: esta KEY no se usa en español, porque es el lenguaje original",
-    "cv_is_available_in": "Mi cv está disponible para"
+    "cv_is_available_in": "Mi cv está disponible para",
+    "serch_powered_by": "Resultados gracias a "
   },
   "page_descriptions": {
     "blog": "Encuentra artículos sobre desarrollo web, tecnología, programación, diseño y más.",
