add flare to about page

--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -11,7 +11,7 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 <FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
     <div class="lg:grid lg:items-center xl:items-start lg:grid-cols-2 lg:gap-4">
-      <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hola, soy <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. Amo crear cosas que puedes ver en tu navegador.</h1>
+      <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hola, soy Misael Taveras. <span class="text-red-500 underline underline-offset-8">Amo</span> crear cosas que puedes disfrutar <span class="text-blue-600 dark:text-blue-500">en tu navegador.</span></h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
         Soy un ingeniero FrontEnd con **más de 8 años** de experincia ayudando a compañías internacionales a tener exito.
