fix typos and add the first easteregg

--- a/src/content/blog/es/entendiendo-los-snapshots-de-jest.mdx
+++ b/src/content/blog/es/entendiendo-los-snapshots-de-jest.mdx
@@ -197,7 +197,7 @@ En una ocasión, duré unas horas debugueado un snapshot que siempre daba difere
 
 ![GIF: Gary and Avocato from Final Space looking at each other](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNjQ0ZjJlYTViZWUyMDU4OTQyZDQ4OTNlM2UxZDYzNWJkZmUyNjJhZSZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/3DAr0Tqv7knsXjH9tN/giphy.gif)
 
-En este articulo hemos explorado una de las herramientas que tenemos a la mano para crear tests con más facilidad. **Si eliminamos la fricción que existe para empezar a crear test, es más probable que empecemos a hacerlos.** Ya no hay excusas para no agregar tests a tus aplicaciones.
+En este artículo hemos explorado una de las herramientas que tenemos a la mano para crear tests con más facilidad. **Si eliminamos la fricción que existe para empezar a crear test, es más probable que empecemos a hacerlos.** Ya no hay excusas para no agregar tests a tus aplicaciones.
 
 Si te ha gustado el tema y te ha ayudado, **compártelo con alguien a quien podría interesarle**. Esto no solo ayudaría a la persona con quien lo compartas, sino que también me ayuda a mí a saber que este es un contenido de interés.
 
