--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -10,7 +10,7 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 <FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
     <div class="lg:grid lg:items-center xl:items-start lg:grid-cols-2 lg:gap-4">
-      <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hi, I'm Misael Taveras.<br /> <span class="text-red-500 underline underline-offset-8">I love</span> building stuff with code that you can enjoy <span class="text-blue-600 dark:text-blue-500">on your browser.</span></h1>
+      <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hi, I'm Misael Taveras.<br /> <span data-confetti-button class="cursor-pointer text-red-500 underline underline-offset-8">I love</span> building stuff with code that you can enjoy <span class="text-blue-600 dark:text-blue-500">on your browser.</span></h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
         I'm a FrontEnd developer with **over eight years** of experience helping companies abroad succeed.
