--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -10,12 +10,12 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 <FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
     <div class="lg:grid lg:items-center xl:items-start lg:grid-cols-2 lg:gap-4">
-      <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hola, soy Misael Taveras.<br /> <span class="text-red-500 underline underline-offset-8">Amo</span> crear cosas que puedes disfrutar <span class="text-blue-600 dark:text-blue-500">en tu navegador.</span></h1>
+      <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hola, soy Misael Taveras.<br /> <span data-confetti-button class="cursor-pointer text-red-500 underline underline-offset-8">Amo</span> crear cosas que puedes disfrutar <span class="text-blue-600 dark:text-blue-500">en tu navegador.</span></h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
-        Soy un ingeniero FrontEnd con **más de 8 años** de experincia ayudando a compañías internacionales a tener exito.
+        Soy un ingeniero FrontEnd con **más de 8 años** de experincia ayudando a compañías internacionales a tener éxito.
 
-        Mi meta actula es **ayudarte a construir** software asombroso y de alta calidad.
+        Mi meta es **ayudarte a construir** software asombroso y de alta calidad.
 
         De momento estoy usando **React**, **TypeScript**, y **Node.js**.
       </div>
@@ -26,17 +26,16 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 Nací en 1996, en Santo Domingo, República Dominicana 🇩🇴.
 
-Empecé a aprender a programar cuando tenía 14, con una copia *"no muy legal"* de Visual Studio 2008. Desde entonces no he parado de programar.
-De alguna manera mi papá consiguió un PDF sobre Macromedia Dreamweaver. Aunque estaba desactualizado, fue suficiente para empezar. Ahí descubrí mi pasión por la web, y he estado aprendiendo de forma independiente, aprovechando cada oportunidad para mejorar mis habilidades como programador.
+Empecé a aprender a programar cuando tenía 14, con una copia *"no muy legal"* de Visual Studio 2008. De alguna manera mi papá consiguió un PDF sobre Macromedia Dreamweaver, que aunque estaba desactualizado, fue suficiente para empezar. Ahí descubrí mi pasión por la web, y he estado aprendiendo de forma independiente, aprovechando cada oportunidad para mejorar mis habilidades como programador.
 
-**En 2018, cuando vine a graduarme de Ingeniería en Sistemas** en la universidad, ya había tenido experiencia trabajando como desarrollador en varios sitios, y como freelancer. Pero no me detuve ahí; siempre estoy aprendiendo cosas nuevas y buscando nuevos retos.
-Lo que me llevó a trabajar remoto para compañías internacionales como [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), entre otras.
+**En 2018, cuando me gradué de Ingeniería en Sistemas** en la universidad, ya había tenido experiencia trabajando como desarrollador en varios sitios, y como freelancer. Pero no me detuve ahí; siempre estoy aprendiendo cosas nuevas y buscando nuevos retos.
+Lo que me llevó a trabajar para compañías y clientes internacionales como [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), entre otras.
 
 ## Lo que hago
 
 El termino *FrontEnd Engineer* puede significar muchas cosas. En principio significa que uso HTML, CSS, JavaScript y todos los sabores relacionados para crear una interfaz que ayude a los usuarios a lograr lo que quieren y a la compañía a llegar a más usuarios.
 
-Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los botones, colores e interacciones. El punto de contacto entre la compañía y sus usuarios. Y siempre estoy buscando formas de hacer el viaje más agradable.
+Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los botones, colores e interacciones. El punto de contacto entre la compañía y sus usuarios. Y siempre estoy buscando formas de hacer el viaje más agradable.
 
 **Para el usuario**: el software será rápido, responsivo, intuitivo y fácil de usar.
 
@@ -59,7 +58,7 @@ Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los boto
   
   **Rendimiento**: Sé lo frustrante que puede ser usar una página web lenta, o poco responsiva. Por eso siempre abordo cada situación con una mentalidad de mejora progresiva.
   
-  **Accesibilidad**: A diferencia de otras plataformas, la web puede ser accedida desde casi cualquier dispositivo. Con pantallas de todos los tamaños, rangos de colores y métodos de entrada; por lo que pensar en la accesibilidad es un tema que siempre debe estar sobre la mesa.
+  **Accesibilidad**: A diferencia de otras plataformas, la web puede ser accedida desde casi cualquier dispositivo. Con pantallas de todos los tamaños, rangos de colores y métodos de entrada; por lo que la accesibilidad es un tema que siempre debe estar sobre la mesa.
 
   </div>
 
@@ -71,9 +70,9 @@ Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los boto
 
   Tener una buena experiencia de desarrollo es crítico para aumentar la productividad. Más productividad significa más valor para nuestros usuarios en menos tiempo.
 
-  **Calidad de código**: Siempre trato de escribir código que sea fácil de leer y entender, evitando complejidad innecesaria y abstracciones apresuradas ([AHA](https://kentcdodds.com/blog/aha-programming)).
+  **Calidad de código**: Siempre trato de escribir código que sea fácil de leer y entender, evitando complejidad innecesaria y abstracciones apresuradas.
 
-  **Pruebas y documentación**: Parte de ser productivo es no perder tiempo tratando de entender como funcionan las cosas. Tener la confianza de que tus cambios no romperán algo más a veces es subestimado. Escribir buena documentación y pruebas ha salvado a Misael del futuro incontables veces.
+  **Pruebas y documentación**: Parte de ser productivo es no perder tiempo tratando de entender como funcionan las cosas. Tener la confianza de que tus cambios no romperán algo más a veces es subestimado. Escribir buena documentación y pruebas ha salvado al Misael del futuro incontables veces.
 
   </div>
 
