--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -13,7 +13,7 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
       <h1 class="!mt-0 text-4xl font-bold !leading-snug dark:text-slate-100 max-w-2xl">Hola, soy Misael Taveras.<br /> <span data-confetti-button class="cursor-pointer text-red-500 underline underline-offset-8">Amo</span> crear cosas que puedes disfrutar <span class="text-blue-600 dark:text-blue-500">en tu navegador.</span></h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
-        Soy un ingeniero FrontEnd con **más de 8 años** de experincia ayudando a compañías internacionales a tener éxito.
+        Soy un ingeniero FrontEnd con **más de 8 años** de experiencia ayudando a compañías internacionales a tener éxito.
 
         Mi meta es **ayudarte a construir** software asombroso y de alta calidad.
 
