--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -86,7 +86,7 @@ Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los boto
 
   **Trabajo en equipo**: El software de alta calidad es construido por equipos, no por individuos. Confiar en los demás y ayudar a los demás es vital para crear software que trascienda.
 
-  **Mentoría**: A veces, una conversación uno a uno con alguien puede ser más valiosa que leer un libro o ver un video. Por eso siempre [estoy disponible](/es/contacto) para preguntas y ayudar tanto como sea posible.
+  **Mentoría**: A veces, una conversación uno a uno con alguien puede ser más valiosa que leer un libro o ver un video. Por eso siempre [estoy disponible](/es/contact) para preguntas y ayudar tanto como sea posible.
 
   </div>
 </div>
