move GTT to a component. Only show after a full scroll

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -45,7 +45,8 @@
     "theme.dark": "Dark",
     "theme.light": "Light",
     "theme.auto": "System",
-    "theme.select": "Select a theme"
+    "theme.select": "Select a theme",
+    "go_top": "Go to top"
   },
   "messages": {
     "page_not_found": "Page not found",
