remove link on en/about

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -69,7 +69,7 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
   Having a good developer experience is critical to having good developer productivity. And good developer productivity means more value to our users.
 
-  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and [hasty abstractions](https://kentcdodds.com/blog/aha-programming).
+  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and hasty abstractions.
 
   **Testing & Documentation**: Part of being productive is not wasting time figuring out how things work. Having the confidence that your changes won't break something else sometimes is underrated. Writting good docs and tests has saved future Misael a handful of times.
 
