--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -46,7 +46,8 @@
     "theme.light": "Light",
     "theme.auto": "System",
     "theme.select": "Select a theme",
-    "go_top": "Go to top"
+    "go_top": "Go to top",
+    "written_by": "Written by"
   },
   "messages": {
     "page_not_found": "Page not found",
